# hermes-agentlair

./: .gitignore  DELIVERY_SEMANTICS.md  LICENSE  README.md  plugin.yaml  pyproject.toml
hermes_agentlair/: __init__.py  client.py  plugin.py
tests/: test_client.py  test_plugin.py
